2014-02-14  Vladimir Makarov  <vmakarov@redhat.com> 	    Richard Earnshaw  <rearnsha@arm.com>

PR rtl-optimization/59535
	* lra-constraints.c (process_alt_operands): Encourage alternative
	when unassigned pseudo class is superset of the alternative class.
	(inherit_reload_reg): Don't inherit when optimizing for code size.
	* config/arm/arm.h (MODE_BASE_REG_CLASS): Add version for LRA
	returning CORE_REGS for anything but Thumb1 and BASE_REGS for
	modes not less than 4 for Thumb1.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@207787 138bc75d-0d04-0410-961f-82ee72b054a4